tests/NormalTests/paczka2/big_fuzzy/39133634.err
Error in line 5: kjP A70 70,3
Error in line 8: n6F A792 62,6
Error in line 17: ?n$F
Error in line 21: A544 A792 73,0
Error in line 13: n6F A544 92,5
Error in line 31: kjP A544 27,6
Error in line 26: v6GxQ A544 83,4
Error in line 36: v6GxQ A70 22,6
Error in line 44: TOqvQ A544 15,9
Error in line 56: TOqvQ A534 65,7
Error in line 55: IStUba A544 77,3
Error in line 70: IStUba A792 99,7
Error in line 81: v6GxQ A534 88,0
Error in line 82: v6GxQ A792 45,6
Error in line 99: v6GxQ A544 210,84
Error in line 95: IStUba A70 31,7
Error in line 86: v6GxQ A544 62,8
Error in line 112: n6F A534 -1,5
Error in line 120: PUysajcnO A534 51,1
Error in line 122: PUysajcnO A70 89,9
Error in line 125: PUysajcnO A544 8,2
Error in line 127: A544 A70 25,6
Error in line 132: v6GxQ A70 70,08
Error in line 130: A544 A792 27,1
Error in line 105: TOqvQ A544 127,4
Error in line 134: IStUba A70 35,0
Error in line 109: n6F A534 12,3
Error in line 135: A544 A534 70,1
Error in line 148: A544 A792 80,8
Error in line 150: IStUba A70 53,94
Error in line 145: kjP A534 56,5
Error in line 152: TOqvQ A70 56,1
Error in line 160: A544 A534 36,9
Error in line 155: IStUba A70 231,8
Error in line 158: TOqvQ A534 27,5
Error in line 190: TOqvQ A544 90,7
Error in line 192: TOqvQ A792 88,2
Error in line 196: v6GxQ A544 119,2
Error in line 202: v6GxQ A70 4,7
Error in line 204: TOqvQ A534 92,2
Error in line 208: TOqvQ A544 19,2
Error in line 219: A544 A792 57,7
Error in line 221: TOqvQ A70 93,1
Error in line 222: PUysajcnO A534 41,4
Error in line 210: n6F A534 361,6
Error in line 241: PUysajcnO A544 0,7
Error in line 246: PUysajcnO A'92 2','
